chore: Add stress endpoints for CPU and memory
